--- a/通过不同视频来并排比较复杂网页的载入速度.md
+++ b/通过不同视频来并排比较复杂网页的载入速度.md
@@ -1,13 +1,13 @@
 下面的视频可以在这里下载： <https://github.com/gorhill/uBlock/tree/master/doc/media>
 
-#### 演示打开体育网站 (www.si.com)：µBlock vs. 无广告过滤工具
+#### Sports Illustrated (www.si.com): µBlock vs. no blocker
 
 [![µBlock vs no blocker](http://img.youtube.com/vi/1NmQvv7MGbE/0.jpg)](http://youtu.be/1NmQvv7MGbE)
 
-#### 演示打开体育网站 (www.si.com)：Adblock Plus vs. µBlock
+#### Sports Illustrated (www.si.com): Adblock Plus vs. µBlock
 
 [![ABP vs µBlock](http://img.youtube.com/vi/SzJr4hmPlgQ/0.jpg)](https://www.youtube.com/watch?v=SzJr4hmPlgQ)
 
-#### 运行参考基准测试时的 CPU 占用
+#### CPU usage when running reference benchmark
 
 [![ABP vs µBlock](http://img.youtube.com/vi/X8tGAPYLGtI/0.jpg)](https://www.youtube.com/watch?v=X8tGAPYLGtI)
